tests/output/self_hosted/typedef_syntax_error.txt
tests/typedef_syntax_error.oomph:1: error: should be '='

    typedef Foo Int
                ^^^

assert() failed in "self_hosted/error.oomph", line N
